<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMahasiswaActivity"
    android:background="@drawable/gradient_a">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mahasiswa_baru"
            android:textSize="25sp"
            android:textStyle="bold"
            style="@style/textView1">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            style="@style/textView1">
        </TextView>
        <EditText
            android:id="@+id/nimEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/editText1">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            style="@style/textView1">
        </TextView>
        <EditText
            android:id="@+id/namaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            style="@style/editText1">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            style="@style/textView1">
        </TextView>
        <Spinner
            android:id="@+id/jenisKelaminSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/jenisKelaminArray"
            style="@style/spinner1">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_lahir">
        </TextView>
        <EditText
            android:id="@+id/tempatLahirEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            style="@style/editText1">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            style="@style/textView1">
        </TextView>
        <EditText
            android:id="@+id/tanggalLahirEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            style="@style/editText1">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            style="@style/textView1">
        </TextView>
        <EditText
            android:id="@+id/alamatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            style="@style/editText1">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jurusan_prodi"
            style="@style/textView1">
        </TextView>
        <Spinner
            android:id="@+id/jpSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/jpArray"
            style="@style/spinner1">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_pernikahan"
            style="@style/textView1">
        </TextView>
        <Spinner
            android:id="@+id/statusNikahSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/statusNikahArray"
            style="@style/spinner1">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun_masuk"
            style="@style/textView1">
        </TextView>
        <EditText
            android:id="@+id/tahunMasukEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/editText1">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:id="@+id/saveButton">
        </Button>
    </LinearLayout>
</ScrollView>