<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kodeTextView"
        android:text="@string/kode"
        android:padding="5dp"
        android:textColor="#CCC">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="#CCC"
        android:text="@string/titikdua">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kursTextView"
        android:text="@string/kurs"
        android:padding="5dp"
        android:textColor="#CCC">
    </TextView>
</LinearLayout>